--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -2,28 +2,28 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  list-style-type: none;
+  font-family: Microsoft JhengHei;
 }
 
-body header #nav nav {
+body header #nav {
   width: 100%;
   height: 60px;
-  padding: 0px 8%;
+  padding: 0px 5%;
+}
+body header #nav nav {
   display: flex;
   justify-content: space-between;
 }
 body header #nav nav .logo {
+  width: 60%;
   height: 60px;
-  display: flex;
-  justify-content: start;
-  font-size: 10px;
 }
 body header #nav nav .logo .logo-picture {
-  width: 138px;
-  padding-left: 5px;
+  float: left;
+  margin-right: 5px;
+  padding-top: 15px;
   border: 1px solid rgba(0, 0, 0, 0);
-  margin-right: 40px;
-  display: flex;
-  align-items: center;
 }
 body header #nav nav .logo .logo-picture img {
   width: 120px;
@@ -34,48 +34,33 @@ body header #nav nav .logo .logo-picture:hover {
 body header #nav nav .logo .logo-picture:active {
   border: 1px dashed #000;
 }
-body header #nav nav .logo .connect {
-  padding-top: 2px;
-  padding-bottom: 10px;
-  display: flex;
-  justify-content: start;
-}
-body header #nav nav .logo .connect .link {
+body header #nav nav .logo .connect li {
+  float: left;
   line-height: 60px;
-  height: 100%;
-  margin-right: 20px;
+  font-size: 13px;
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
-body header #nav nav .logo .connect .link a {
+body header #nav nav .logo .connect li a {
   color: #000;
   text-decoration: none;
 }
-body header #nav nav .logo .connect .link:hover {
+body header #nav nav .logo .connect li:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 2px;
-  cursor: pointer;
 }
-body header #nav nav .logo .connect .link:active {
+body header #nav nav .logo .connect li:active {
   border: 1px dashed #000;
 }
 body header #nav nav .search-login {
-  height: 60px;
-  float: right;
+  width: 40%;
   display: flex;
   justify-content: end;
-}
-body header #nav nav .search-login .all i {
-  position: absolute;
-  top: 30px;
-  font-size: 15px;
+  font-size: 13px;
 }
 body header #nav nav .search-login .link {
-  height: 60px;
   line-height: 60px;
-  margin-right: 15px;
-  font-size: 13px;
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
@@ -83,29 +68,48 @@ body header #nav nav .search-login .link a {
   color: #000;
   text-decoration: none;
 }
+@media (max-width: 1400px) {
+  body header #nav nav .search-login .link a span {
+    display: none;
+  }
+}
 body header #nav nav .search-login .link:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 5px;
-  cursor: pointer;
 }
 body header #nav nav .search-login .link:active {
   border: 1px dashed #000;
 }
 body header #nav nav .search-login .search {
-  margin-right: 60px;
+  margin-right: 8%;
+}
+@media (max-width: 1400px) {
+  body header #nav nav .search-login .search {
+    margin: 0px;
+  }
 }
 body header #nav nav .search-login .login {
   width: 80px;
   display: flex;
+  align-items: center;
+}
+body header #nav nav .search-login .login a {
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
-body header #nav nav .search-login .login img {
+body header #nav nav .search-login .login a img {
   height: 30px;
 }
 body header #nav nav .search-login .login:hover {
   text-decoration: none;
+}
+@media (max-width: 1400px) {
+  body header #nav nav .search-login .login {
+    display: flex;
+    justify-content: center;
+  }
 }
 body main .banner {
   position: relative;
@@ -179,26 +183,33 @@ body main .container-top ul li a {
 body main .container-mid {
   display: flex;
   justify-content: center;
-  padding: 0px 10%;
+  padding: 0px 5%;
   margin: 50px 0px;
+}
+body main .container-mid .outer-frame {
   display: flex;
   justify-content: space-between;
 }
-body main .container-mid .commodity {
+body main .container-mid .outer-frame .commodity {
   width: calc(25% - 12px);
 }
-body main .container-mid .commodity img {
+body main .container-mid .outer-frame .commodity picture img {
   width: 100%;
   margin-bottom: 20px;
 }
-body main .container-mid .commodity .word h2 {
+body main .container-mid .outer-frame .commodity .word {
+  margin-bottom: 20px;
+}
+body main .container-mid .outer-frame .commodity .word h2 {
   font-size: 30px;
   margin-bottom: 20px;
 }
-body main .container-mid .commodity .link-group {
-  margin-top: 20px;
+@media (max-width: 1400px) {
+  body main .container-mid .outer-frame .commodity .word h2 {
+    font-size: 25px;
+  }
 }
-body main .container-mid .commodity .link-group a {
+body main .container-mid .outer-frame .commodity .link-group a {
   font-size: 18px;
   color: #0067b8;
   text-decoration: none;
@@ -209,17 +220,40 @@ body main .container-mid .commodity .link-group a {
   width: fit-content;
   float: left;
 }
+body main .container-mid .outer-frame .commodity .link-group a:hover {
+  text-decoration: underline;
+}
+body main .container-mid .outer-frame .commodity .link-group a::after {
+  content: ">";
+}
+@media (max-width: 1086px) {
+  body main .container-mid .outer-frame .commodity {
+    width: 50%;
+    padding: 0px 12px;
+  }
+}
+@media (max-width: 1086px) {
+  body main .container-mid .outer-frame {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 1086px) {
+  body main .container-mid {
+    padding: 0px;
+  }
+}
 body main .banner-2 {
   width: 100%;
   margin: 50px 0px 80px;
-  padding: 0px 10%;
+  padding: 0px 5%;
   position: relative;
 }
 body main .banner-2 picture img {
   width: 100%;
 }
 body main .banner-2 .picture-word-shell {
-  width: calc(100% - 150px);
+  width: 90%;
   position: absolute;
   top: 0;
   padding-left: 5%;
@@ -232,6 +266,11 @@ body main .banner-2 .picture-word-shell .picture-word h1 {
   font-size: 40px;
   margin-bottom: 15px;
 }
+@media (max-width: 1400px) {
+  body main .banner-2 .picture-word-shell .picture-word h1 {
+    font-size: 25px;
+  }
+}
 body main .banner-2 .picture-word-shell .picture-word .describe {
   margin-bottom: 15px;
 }
@@ -242,8 +281,13 @@ body main .banner-2 .picture-word-shell .picture-word button {
   font-size: 15px;
   padding: 10px 15px;
 }
+@media (max-width: 1086px) {
+  body main .banner-2 {
+    padding: 0px;
+  }
+}
 body main .container-bot {
-  padding: 0px 10%;
+  padding: 0px 5%;
 }
 body main .container-bot h1 {
   margin-bottom: 20px;
@@ -274,8 +318,15 @@ body main .container-bot .information .card .word h2 {
   font-size: 30px;
   margin: 40px 0px 20px;
 }
+@media (max-width: 1400px) {
+  body main .container-bot .information .card .word h2 {
+    font-size: 25px;
+  }
+}
+body main .container-bot .information .card .word p {
+  margin-bottom: 20px;
+}
 body main .container-bot .information .card .word a {
-  margin-top: 20px;
   font-size: 18px;
   color: #0067b8;
   text-decoration: none;
@@ -284,13 +335,16 @@ body main .container-bot .information .card .word a {
   width: -moz-fit-content;
   width: fit-content;
 }
+body main .container-bot .information .card .word a:hover {
+  text-decoration: underline;
+}
 body main .container-bot .community {
   margin-bottom: 100px;
 }
 body main .container-bot .community ul {
   width: 200px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 body main .container-bot .community ul li {
@@ -299,4 +353,67 @@ body main .container-bot .community ul li {
 body main .container-bot .community ul img {
   width: 32px;
   height: 32px;
+}
+body main .footer {
+  width: 100%;
+  background-color: #f2f2f2;
+}
+body main .footer .table {
+  width: 100%;
+  padding: 0px 5%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+body main .footer .table .list {
+  width: calc(16.6666666667% - 10px);
+  padding: 0px 5px;
+}
+body main .footer .table .list p {
+  padding: 30px 0px 8px 0px;
+  font-size: 15px;
+}
+body main .footer .table .list li {
+  padding: 8px 0px;
+  font-size: 11px;
+}
+body main .footer .table .list li a {
+  color: #616161;
+  text-decoration: none;
+}
+body main .footer .table .list li a:hover {
+  text-decoration: underline;
+}
+body main .footer .table .latest-trends {
+  padding-left: 0px;
+}
+body main .footer .statement {
+  padding: 0px 5%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+body main .footer .statement .earth {
+  font-size: 13px;
+}
+body main .footer .statement .earth a {
+  color: #616161;
+  text-decoration: none;
+}
+body main .footer .statement .earth a:hover {
+  text-decoration: underline;
+}
+body main .footer .statement .microsoft-link ul {
+  display: flex;
+}
+body main .footer .statement .microsoft-link ul li {
+  margin-right: 24px;
+  font-size: 11px;
+}
+body main .footer .statement .microsoft-link ul li a {
+  color: #616161;
+  text-decoration: none;
+}
+body main .footer .statement .microsoft-link ul li a:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=microsoft.css.map */
