--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -2,6 +2,8 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    list-style-type: none;
+    font-family: Microsoft JhengHei;
 
 
 }
@@ -9,37 +11,31 @@
 body {
     header {
         #nav {
+            width: 100%;
+            height: 60px;
+            padding: 0px 5%;
+
             nav {
-                width: 100%;
-                height: 60px;
-                // background-color: aqua;
-                padding: 0px 8%;
                 display: flex;
                 justify-content: space-between;
 
+
                 .logo {
-                    // width: calc(100% / 2);
+                    width: 60%;
                     height: 60px;
-                    // padding: 0px 0px 15px 0px;
-                    // float: left;
-                    display: flex;
-                    justify-content: start;
-                    font-size: 10px;
+
 
                     .logo-picture {
-                        width: 138px;
-                        padding-left: 5px;
+                        float: left;
+                        margin-right: 5px;
+                        padding-top: 15px;
                         border: 1px solid rgba($color: #000000, $alpha: 0);
 
-                        // height: 60px;
-                        // background-color: beige;
-                        margin-right: 40px;
-                        display: flex;
-                        align-items: center;
+
 
                         img {
                             width: 120px;
-                            // height: 60px;
+
 
                         }
 
@@ -53,18 +49,18 @@ body {
                     }
 
                     .connect {
-                        padding-top: 2px;
-                        padding-bottom: 10px;
-                        display: flex;
-                        justify-content: start;
 
-                        .link {
+
+
+
+
+                        li {
+                            float: left;
                             line-height: 60px;
-                            height: 100%;
-                            // background-color: coral;
-                            margin-right: 20px;
-                            // margin-top: 1px;
+                            font-size: 13px;
+                            // margin: 0px 1.5%;
                             padding: 0px 10px;
+
                             border: 1px solid rgba($color: #000000, $alpha: 0);
 
                             a {
@@ -76,7 +72,7 @@ body {
                                 text-decoration: underline;
                                 text-decoration-thickness: 2px;
                                 text-underline-offset: 2px;
-                                cursor: pointer;
+
                             }
 
                             &:active {
@@ -90,40 +86,48 @@ body {
                 }
 
                 .search-login {
-                    // width: calc(100% / 2);
-                    height: 60px;
-                    // background-color: darkgoldenrod;
-                    float: right;
+                    width: 40%;
+                    // height: 60px;
+                    // // background-color: darkgoldenrod;
+                    // float: right;
                     display: flex;
                     justify-content: end;
+                    font-size: 13px;
 
                     .all {
 
                         i {
-                            position: absolute;
-                            top: 30px;
-                            font-size: 15px;
+                            // position: absolute;
+                            // top: 30px;
+                            // font-size: 15px;
                         }
                     }
 
                     .link {
-                        height: 60px;
+
                         line-height: 60px;
-                        margin-right: 15px;
-                        font-size: 13px;
+
                         padding: 0px 10px;
                         border: 1px solid rgba($color: #000000, $alpha: 0);
 
                         a {
                             color: #000;
                             text-decoration: none;
+
+                            span {
+
+                                @media (max-width:1400px) {
+                                    display: none;
+                                }
+                            }
+
                         }
 
                         &:hover {
                             text-decoration: underline;
                             text-decoration-thickness: 2px;
                             text-underline-offset: 5px;
-                            cursor: pointer;
+
                         }
 
                         &:active {
@@ -132,22 +136,37 @@ body {
                     }
 
                     .search {
-                        margin-right: 60px;
+                        margin-right: 8%;
+                        @media (max-width:1400px) {
+                            margin: 0px;
+                        }
                     }
 
 
                     .login {
                         width: 80px;
                         display: flex;
-                        justify-content: space-between;
                         align-items: center;
 
-                        img {
-                            height: 30px;
+                        a {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+
+
+                            img {
+                                height: 30px;
+
+                            }
                         }
+
 
                         &:hover {
                             text-decoration: none;
+                        }
+                        @media (max-width:1400px) {
+                            display: flex;
+                            justify-content: center;
                         }
                     }
 
@@ -255,49 +274,81 @@ body {
         .container-mid {
             display: flex;
             justify-content: center;
-            padding: 0px 10%;
+            padding: 0px 5%;
             margin: 50px 0px;
-            display: flex;
-            justify-content: space-between;
-
-            .commodity {
-                width: calc(calc(100% / 4) - 12px);
-
-
-                img {
-                    width: 100%;
-                    margin-bottom: 20px;
-                }
-
-                .word {
-
-                    h2 {
-                        font-size: 30px;
+            .outer-frame{
+                
+                display: flex;
+                justify-content: space-between;
+                .commodity {
+                    width: calc(calc(100% / 4) - 12px);
+    
+                    picture {
+    
+                        img {
+                            width: 100%;
+                            margin-bottom: 20px;
+                        }
+                    }
+    
+    
+                    .word {
                         margin-bottom: 20px;
+    
+                        h2 {
+                            font-size: 30px;
+                            margin-bottom: 20px;
+                            @media (max-width:1400px) {
+                                font-size: 25px;
+                            }
+                        }
+                    }
+    
+                    .link-group {
+    
+    
+                        a {
+                            font-size: 18px;
+                            color: #0067b8;
+                            text-decoration: none;
+                            margin: 16px 24px 16px 0px;
+                            display: block;
+                            width: fit-content;
+                            float: left;
+    
+                            &:hover {
+                                text-decoration: underline;
+    
+                            }
+    
+                            &::after {
+                                content: ">";
+    
+                            }
+    
+                        }
+    
+                    }
+                    @media(max-width:1086px){
+                        width: calc(100% / 2);
+                        padding: 0px 12px;
                     }
                 }
-
-                .link-group {
-                    margin-top: 20px;
-
-                    a {
-                        font-size: 18px;
-                        color: #0067b8;
-                        text-decoration: none;
-                        margin: 16px 24px 16px 0px;
-                        display: block;
-                        width: fit-content;
-                        float: left;
-                    }
-
+                @media(max-width:1086px){
+                    display: flex;
+                    flex-wrap: wrap;
                 }
             }
+            @media(max-width:1086px){
+                padding: 0px;
+            }
+
         }
 
         .banner-2 {
             width: 100%;
             margin: 50px 0px 80px;
-            padding: 0px 10%;
+            padding: 0px 5%;
             position: relative;
 
             picture {
@@ -308,7 +359,7 @@ body {
             }
 
             .picture-word-shell {
-                width: calc(100% - 150px);
+                width: 90%;
                 position: absolute;
                 top: 0;
                 padding-left: 5%;
@@ -321,6 +372,9 @@ body {
                     h1 {
                         font-size: 40px;
                         margin-bottom: 15px;
+                        @media (max-width:1400px) {
+                            font-size: 25px;
+                        }
                     }
 
                     .describe {
@@ -334,13 +388,17 @@ body {
                         font-size: 15px;
                         padding: 10px 15px;
                     }
+                    
                 }
+            }
+            @media(max-width:1086px){
+                padding: 0px;
             }
         }
 
         .container-bot {
-            padding: 0px 10%;
-            
+            padding: 0px 5%;
+
 
             h1 {
                 margin-bottom: 20px;
@@ -380,36 +438,133 @@ body {
                         h2 {
                             font-size: 30px;
                             margin: 40px 0px 20px;
+                            @media (max-width:1400px) {
+                                font-size: 25px;
+                            }
                         }
 
-                        p {}
+                        p {
+                            margin-bottom: 20px;
+                        }
 
                         a {
-                            margin-top: 20px;
+
                             font-size: 18px;
                             color: #0067b8;
                             text-decoration: none;
                             display: block;
                             width: fit-content;
+
+                            &:hover {
+                                text-decoration: underline;
+                            }
                         }
                     }
                 }
             }
-            .community{
+
+            .community {
                 margin-bottom: 100px;
-                ul{
+
+                ul {
                     width: 200px;
                     display: flex;
-                    justify-content: space-around;
+                    justify-content: space-between;
                     align-items: center;
-                    li{
+
+                    li {
                         list-style-type: none;
                     }
-                    img{
+
+                    img {
                         width: 32px;
                         height: 32px;
                     }
                 }
+            }
+        }
+
+        .footer {
+            width: 100%;
+            background-color: #f2f2f2;
+
+            .table {
+                width: 100%;
+                padding: 0px 5%;
+                margin-bottom: 20px;
+                display: flex;
+                justify-content: space-between;
+
+                .list {
+                    width: calc(calc(100% / 6) - 10px);
+                    padding: 0px 5px;
+
+                    p {
+                        padding: 30px 0px 8px 0px;
+                        font-size: 15px;
+                    }
+
+                    li {
+                        padding: 8px 0px;
+                        font-size: 11px;
+
+                        a {
+                            color: #616161;
+                            text-decoration: none;
+
+                            &:hover {
+                                text-decoration: underline;
+                            }
+                        }
+                    }
+                }
+
+                .latest-trends {
+                    padding-left: 0px;
+                }
+
+            }
+
+            .statement {
+                padding: 0px 5%;
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 20px;
+
+                .earth {
+                    font-size: 13px;
+
+                    a {
+                        color: #616161;
+                        text-decoration: none;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                }
+
+                .microsoft-link {
+                    ul {
+
+                        display: flex;
+
+                        li {
+                            margin-right: 24px;
+                            font-size: 11px;
+
+                            a {
+                                color: #616161;
+                                text-decoration: none;
+
+                                &:hover {
+                                    text-decoration: underline;
+                                }
+                            }
+                        }
+                    }
+                }
+
             }
         }
 
